fixed alignment of large image on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,11 @@ footer h3 {
         padding-bottom: 0px;
         }
 
+    #professional-projects .large {
+        display: flex;
+        justify-content: center;
+    }
+
     .image-title-right, .image-title-bottom-right {
         right: 0px;
         }
